# jolly

./: .env.example  .gitignore  README.md  benchmark_results.csv  package-lock.json  package.json  svelte.config.js  vite.config.ts  wrangler.toml
.github/workflows/: deploy-web.yml  release-app.yml
docs/superpowers/plans/: 2026-03-18-harper-integration.md  2026-03-21-custom-model-import.md  2026-03-21-mobile-responsiveness.md  2026-03-22-parallel-inference.md  2026-03-22-vulkan-inference-backend.md  2026-03-24-benchmark-page.md
docs/superpowers/specs/: 2026-03-18-harper-integration-design.md  2026-03-21-custom-model-import-design.md  2026-03-21-mobile-responsiveness-design.md  2026-03-22-download-links-design.md  2026-03-22-parallel-inference-design.md  2026-03-22-vulkan-inference-backend-design.md  2026-03-24-benchmark-page-design.md
src/: app.html
src-tauri/: Cargo.toml  benchmark_results.csv  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/inference/: download.rs  harper.rs  local.rs  mod.rs  model_manager.rs  openrouter.rs  registry.rs
src-tauri/tests/: local_inference.rs
src/lib/: harper-web.ts
src/lib/components/: BirdScene.svelte  History.svelte  Navbar.svelte  Settings.svelte  ThinkingBubble.svelte
src/lib/server/llm/: index.ts  openrouter.ts  types.ts
src/lib/stores/: settings.svelte.ts  settings.ts
src/lib/types/: models.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  layout.css
src/routes/about/: +page.svelte
src/routes/api/correct/: +server.ts
src/routes/app/: +layout@.svelte  +page.svelte
src/routes/benchmark/: +page.svelte
src/routes/download/: +page.svelte
static/: ICONS.md
