[package]
name = "jolly"
version = "0.1.0"
edition = "2021"

[lib]
name = "jolly_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-keyring = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
sha2 = "0.10"
llama-cpp-2 = { version = "0.1", features = ["sampler"] }
async-trait = "0.1"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3"
dirs-next = "2"

[features]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
cuda = ["llama-cpp-2/cuda"]
