[package]
name = "jolly"
version = "0.0.7"
edition = "2021"
license = "GPL-3.0-only"
default-run = "jolly"

[lib]
name = "jolly_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "jolly"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-keyring = "0.1"
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
sha2 = "0.10"
llama-cpp-2 = { version = "0.1.139", features = ["sampler"] }
encoding_rs = "0.8"
async-trait = "0.1"
dirs-next = "2"
regex = "1"
harper-core = "1"

[dev-dependencies]
tempfile = "3"

[features]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
